# cicevse

./: .gitignore  CLAUDE.md  COMPLETE_WORKFLOW.md  DATA_PY_IMPROVEMENTS.md  FINAL_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  QUICKSTART.md  README.md  UPGRADE_DATA.md  data.py  enhanced_model.py  enhanced_training.py  explainability.py  model.py  pyproject.toml
archive/docs/: QUICK_REFERENCE.txt
archive/old-scripts/: data_fixes.py  data_improved.py  run_complete_pipeline.py
research/: abbreviation.tex  bibliography.bib  manuscript.acn  manuscript.aux  manuscript.bbl  manuscript.bcf  manuscript.blg  manuscript.ist  manuscript.out  manuscript.run.xml  manuscript.tex  manuscript.txss2
research/commands/: cleanjunk.bat
research/documents/: Paper- detecting DDoS and other cyberattacks on Electric Vehicles (EVs) and EV charging in.docx
research/sections/: introduction.aux  introduction.tex  literature.aux  literature.tex  methodology.aux  methodology.tex  results.aux  results.tex
