[project]
name = "cicevse"
version = "0.1.0"
description = "Federated Learning for Privacy-Preserving Intrusion Detection in EVSE with Explainability"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imbalanced-learn>=0.14.0",
    "kaleido>=1.1.0",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "shap>=0.45.0",
    "captum>=0.7.0",
    "numpy>=1.26.0",
]
